--- a/gunks.css
+++ b/gunks.css
@@ -31,22 +31,24 @@ h2 {
 }
 
 h3 {
-  font-family: Helvetica, Verdana, Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16pt;
   font-weight: normal;
   font-style: normal;
 }
 
-.normal_button {
-  width: 100px;
-}
-
-/*.footerText {
+button {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #9DCE5B;
   color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 8pt;
-  text-align: center;
-}*/
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 130px;
+  border-radius: 5px;
+  font-size: 15pt;
+}
 
 /* Creates two columns/boxes that float next to each other */
 .sidenav {
