--- a/gunks.css
+++ b/gunks.css
@@ -7,12 +7,15 @@ header {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
+/*Outer wrapper*/
+body { 
   background: #D7DEF4;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12pt;
   font-weight: normal;
   font-style: normal;
+  z-index: 0;
+  position: relative;
 }
 
 h1 {
@@ -53,9 +56,9 @@ button {
 /* Creates two columns/boxes that float next to each other */
 .sidenav {
   float:left;
-  width: 195px;
+  width: 140px;
   /*position: fixed;*/
-  top: 143px;
+  top: 350px;
   left: 10px;
   background: #9DCE5B;
   overflow-x: hidden;
@@ -71,13 +74,32 @@ button {
   display: block;
 }
 
+/*Middle wrapper*/
 .index {
+  position: absolute;
+  z-index: 1;
+  background-color: #DFE4E8;
   left: 140px;
   width: 85%;
   height: 800px;
+  top: 206px;
   font-size: 20px;
-  background-color: #DFE4E8;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   float: right;
+}
+
+/*Top wrapper*/
+.file {
+  position: absolute;
+  z-index: 2;
+  background-color: #ECE3E3;
+  left: 150px;
+  width: 80%;
+  height: 600px;
+  top: 350px;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 20px;
 }
 
 /* Style the list inside the menu */
