--- a/leslieFolder/gunks.css
+++ b/leslieFolder/gunks.css
@@ -1,17 +1,27 @@
-﻿header {
-  background-color: rgb(26, 44, 27);
+﻿.header { /*made it into a container to make lives easier*/
+  background-color: #33443C;
   padding: 30px;
   text-align: right;
   font-size: 35px;
   color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
-  background: #D2D2DC url(distrib/images/linen.png) repeat;
-  font-family: Helvetica, Verdana, Arial, sans-serif;
+.header img { /*this is for the logo*/
+  float: left;
+  width: 400px;
+  height: 150px;
+}
+
+/*Outer wrapper*/
+body { 
+  background: #D7DEF4;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12pt;
   font-weight: normal;
   font-style: normal;
+  z-index: 0;
+  position: relative;
 }
 
 h1 {
@@ -19,50 +29,62 @@ h1 {
   font-size: 24pt;
   font-weight: normal;
   font-style: normal;
+  padding: 10px 15px;
   border-bottom: 1px solid black;
 }
 
-h2 {
+.header h2 { /*the welcome user part so no regular h2*/
   color: black;
+  position: relative;
   font-size: 20pt;
   font-weight: normal;
   font-style: normal;
 }
 
 h3 {
-  font-family: Helvetica, Verdana, Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16pt;
   font-weight: normal;
   font-style: normal;
 }
 
-#display {
-  background-color:#DFDBC3;
-  border: 2px solid red;
-  cursor: default;
-}
-
-.normal_button {
-  width: 100px;
-}
-
-/*.footerText {
+.header button { /*the logout button*/
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #9DCE5B;
   color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 8pt;
-  text-align: center;
-}*/
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 130px;
+  border-radius: 5px;
+  font-size: 15pt;
+}
+
+button { /*had to make another one since I kept breaking it*/
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #9DCE5B;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 130px;
+  border-radius: 5px;
+  font-size: 15pt;
+}
 
 /* Creates two columns/boxes that float next to each other */
 .sidenav {
-  width: 130px;
-  position: fixed;
-  z-index: 1;
-  top: 143px;
+  float:left;
+  width: 140px;
+  /*position: fixed;*/
+  top: 350px;
   left: 10px;
-  background: rgb(77, 235, 62);
+  background: #9DCE5B;
   overflow-x: hidden;
   padding: 8px 0;
+  border-radius: 5px;
 }
 
 .sidenav a {
@@ -73,12 +95,48 @@ h3 {
   display: block;
 }
 
+/*Middle wrapper*/
 .index {
-  padding-left: 150px;
+  position: absolute;
+  z-index: 1;
+  background-color: #DFE4E8;
+  left: 143px;
   width: 85%;
   height: 800px;
+  top: 210px;
   font-size: 20px;
-  background-color: #DFDBC3;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  float: right;
+}
+
+/*Top wrapper*/
+.file {
+  position: absolute;
+  z-index: 2;
+  background-color: #ECE3E3;
+  left: 155px;
+  width: 80%;
+  height: 650px;
+  top: 305px;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 20px;
+}
+
+.viewButton {
+  display: inline-block;
+  width: 250px;
+  border: 1px solid lightblue;
+  background: #A2B8C5;
+  overflow-x: hidden;
+  padding: 25px 50px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  margin: 50px 55px;
+  cursor: pointer;
 }
 
 /* Style the list inside the menu */
