--- a/gunks.css
+++ b/gunks.css
@@ -72,13 +72,40 @@ button {
   border-radius: 5px;
 }
 
-.sidenav a {
+.sidenav a, .dropdown-btn {
   padding: 15px 10px 6px 16px;
   text-decoration: none;
   font-size: 20px;
   color: black;
   display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 }
+
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  background-color: rgb(172, 199, 136);
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
 
 /*Middle wrapper*/
 .index {
