--- a/leslieFolder/leslieFolder/gunks.css
+++ b/leslieFolder/leslieFolder/gunks.css
@@ -1,10 +1,16 @@
-﻿header {
+﻿.header { /*made it into a container to make lives easier*/
   background-color: #33443C;
   padding: 30px;
   text-align: right;
   font-size: 35px;
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.header img { /*this is for the logo*/
+  float: left;
+  width: 400px;
+  height: 150px;
 }
 
 /*Outer wrapper*/
@@ -27,8 +33,9 @@ h1 {
   border-bottom: 1px solid black;
 }
 
-h2 {
+.header h2 {
   color: black;
+  position: relative;
   font-size: 20pt;
   font-weight: normal;
   font-style: normal;
@@ -41,7 +48,36 @@ h3 {
   font-style: normal;
 }
 
-button {
+.header button {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #9DCE5B;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 130px;
+  border-radius: 5px;
+  font-size: 15pt;
+}
+
+.viewButton {
+  display: inline-block;
+  width: 250px;
+  border: 1px solid lightblue;
+  background: #A2B8C5;
+  overflow-x: hidden;
+  padding: 25px 50px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+  margin: 50px 55px;
+  cursor: pointer;
+}
+
+button { /*had to make another one since I kept breaking it*/
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #9DCE5B;
   color: black;
@@ -67,20 +103,34 @@ button {
   border-radius: 5px;
 }
 
-.sidenav a {
+.sidenav a, .dropdown-btn {
   padding: 15px 10px 6px 16px;
   text-decoration: none;
   font-size: 20px;
   color: black;
   display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 }
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  background-color: rgb(172, 199, 136);
+  padding-left: 8px;
+}
+
 
 /*Middle wrapper*/
 .index {
   position: absolute;
   z-index: 1;
   background-color: #DFE4E8;
-  left: 143px;
+  left: 140px;
   width: 85%;
   height: 800px;
   top: 210px;
@@ -89,34 +139,38 @@ button {
   float: right;
 }
 
+table {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #ffffff;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(odd) {
+  background-color: #D7DEF4;
+}
+
+tr:nth-child(even) {
+  background-color: #ECE3E3;
+}
+
 /*Top wrapper*/
 .file {
   position: absolute;
   z-index: 2;
   background-color: #ECE3E3;
-  left: 155px;
+  left: 150px;
   width: 80%;
-  height: 650px;
-  top: 305px;
+  height: 600px;
+  top: 350px;
   font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 20px;
-}
-
-.viewButton {
-  display: inline-block;
-  width: 250px;
-  border: 1px solid lightblue;
-  background: #A2B8C5;
-  overflow-x: hidden;
-  padding: 25px 50px;
-  border-radius: 5px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 25px;
-  color: black;
-  margin: 50px 55px;
-  cursor: pointer;
 }
 
 /* Style the list inside the menu */
