--- a/views/create_question.html
+++ b/views/create_question.html
@@ -1,72 +1,41 @@
-﻿<!DOCTYPE html>
-<html lang = "en">
+﻿<html>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale = 1">
+    <link rel="stylesheet" href="css/gunks.css" />
+</head>
 <body>
-    <head>
-        <title> Create a Question</title> 
-        <script src = "create_question.js"></script>
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale = 1">
-        <link rel = "stylesheet" href = "gunks.css"/> 
-    </head>
-    <body>
-        <div class = "header">
-            <a href = "index.html">
-                <img src = "SurvyaySmallLogo.jpg" alt = "SurvYay">
-            </a>
-            <h2>Welcome, User!</h2>
-            <button type = "button"> Logout</button>
-        </div>
 
-        <div class="sidenav"> 
-            <button class="dropdown-btn" id="create">Create ></button>
-            <div class="dropdown-container">
-                <a href="create_question.html">Questions</a>
-                <a href="create_survey.html">Surveys</a>
-            </div>
-            
-            <button class="dropdown-btn" id="fill">Fill ></button>
-            <div class="dropdown-container">
-                <a href="fill_survey.html">Surveys</a>
-            </div>
+    <div>
+        <h1>Create Question</h1>
+    </div>
 
-            <button class="dropdown-btn" id="view">View ></button>
-            <div class="dropdown-container">
-                <a href="view_records.html">Records</a>
-                <a href="view_surveys.html">Surveys</a>
-            </div>
-        </div>
-	
-        <script>
-        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-            var dropdown = document.getElementsByClassName("dropdown-btn");
-            var i;
-                
-            for (i = 0; i < dropdown.length; i++) {
-                dropdown[i].addEventListener("click", function() {
-                    this.classList.toggle("active");
-                    var dropdownContent = this.nextElementSibling;
-                    if (dropdownContent.style.display === "block") {
-                        dropdownContent.style.display = "none";
-                    } else {
-                        dropdownContent.style.display = "block";
-                    }
-                });
-            }
-        </script>
-
-        <div class = "index">
-            <h1>Create Question</h1>
-        </div>
-
-        <div class = "file">
-            <label>Question:</label><br><br>
-            <textarea rows = "4" cols = "50"> 
-            </textarea> 
-            <br><br>
-            <label>Type: </label><br>
-            <input type = "text" name = "type"><br><br>
-            <button type="button" id="Submit">Submit ></button>
-        </div>
-    </body>
+    <div>
+        <label>Question:</label><br><br>
+        <textarea rows="4" cols="50"> 
+        </textarea>
+        <br><br>
+        <label>Type: </label><br>
+        <input type="text" name="type"><br><br>
+        <button type="button" id="Submit">Submit ></button>
+    </div>
 </body>
 </html>
+
+<script >
+    function createQuestion(){
+        var quest = q.value.length;
+        if(quest == 0){
+            alert("Empty question not valid");
+        }else{
+            var question = document.getElementById("createQ");
+        }
+        var questionT = qt.value.length;
+        if(questionT == 0){
+            alert("Empty question type not valid");
+        }else{
+            var questionType = document.getElementById("createQ");
+        }	
+    }
+</script>
