--- a/views/index.html
+++ b/views/index.html
@@ -8,52 +8,52 @@
     </head>
     <body>
         <!--HEADER-->
-        <div class="header"> 
+        <div class="header">
             <a href="index.html">
-                    <img src="images/SurvyaySmallLogo.jpg" alt="SurvYay">
+                <img src="images/SurvyaySmallLogo.jpg" alt="SurvYay">
             </a>
             <h2>Welcome, User!</h2>
             <button type="button">Logout</button>
         </div>
 
         <!--SIDE NAV-->
-        <div class="sidenav"> 
+        <div class="sidenav">
             <button class="dropdown-btn" id="create">Create ></button>
             <div class="dropdown-container">
-                <a href="create_question.html">Questions</a>
-                <a href="create_survey.html">Surveys</a>
-            </div>
-            
+                <a href="#" onclick="load_tab('create_question')">Questions</a>
+                <a href="#" onclick="load_tab('create_survey')">Surveys</a>
+</div>
+
             <button class="dropdown-btn" id="fill">Fill ></button>
             <div class="dropdown-container">
-                <a href="fill_survey.html">Surveys</a>
-            </div>
+                <a href="#" onclick="load_tab('fill_survey')">Surveys</a>
+</div>
 
             <button class="dropdown-btn" id="view">View ></button>
             <div class="dropdown-container">
-                <a href="view_records.html">Records</a>
-                <a href="view_surveys.html">Surveys</a>
-            </div>
+                <a href="#" onclick="load_tab('view_records')">Records</a>
+                <a href="#" onclick="load_tab('view_surveys')">Surveys</a>
+</div>
         </div>
 
         <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
-        <div class="index">
+        <div class="container" id="content">
             <span>Welcome, make a site selection to begin!</span>
-           
+
         </div>
 
         <!--This goes into each individual html file
-        <div class="file" id="file">
-            <span>Question: </span>
-        </div>-->
+    <div class="file" id="file">
+        <span>Question: </span>
+    </div>-->
 
         <script>
-        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+            /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
             var dropdown = document.getElementsByClassName("dropdown-btn");
             var i;
-                
+
             for (i = 0; i < dropdown.length; i++) {
-                dropdown[i].addEventListener("click", function() {
+                dropdown[i].addEventListener("click", function () {
                     this.classList.toggle("active");
                     var dropdownContent = this.nextElementSibling;
                     if (dropdownContent.style.display === "block") {
@@ -62,6 +62,12 @@
                         dropdownContent.style.display = "block";
                     }
                 });
+            }
+
+            function load_tab(tab) {
+                var dest = 'views/' + tab
+                console.log(dest);
+                document.getElementById("content").innerHTML = '<object type="text/html" data='+tab+' ></object>';
             }
         </script>
 
