--- a/views/index.html
+++ b/views/index.html
@@ -22,54 +22,49 @@
             <div class="dropdown-container">
                 <a href="#" onclick="load_tab('create_question')">Questions</a>
                 <a href="#" onclick="load_tab('create_survey')">Surveys</a>
-</div>
+            </div>
 
             <button class="dropdown-btn" id="fill">Fill ></button>
             <div class="dropdown-container">
                 <a href="#" onclick="load_tab('fill_survey')">Surveys</a>
-</div>
+            </div>
 
             <button class="dropdown-btn" id="view">View ></button>
             <div class="dropdown-container">
                 <a href="#" onclick="load_tab('view_records')">Records</a>
                 <a href="#" onclick="load_tab('view_surveys')">Surveys</a>
-</div>
+            </div>
         </div>
 
         <!--CONTAINER WHERE ALL THE SEPARATE PAGES ARE GOING TO GO-->
-        <div class="container" id="content">
-            <span>Welcome, make a site selection to begin!</span>
+        <div  id="content" style="height:auto; width:auto ">
+            <h5>Welcome, make a site selection to begin!</h5>
 
         </div>
 
-        <!--This goes into each individual html file
-    <div class="file" id="file">
-        <span>Question: </span>
-    </div>-->
-
-        <script>
-            /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-            var dropdown = document.getElementsByClassName("dropdown-btn");
-            var i;
-
-            for (i = 0; i < dropdown.length; i++) {
-                dropdown[i].addEventListener("click", function () {
-                    this.classList.toggle("active");
-                    var dropdownContent = this.nextElementSibling;
-                    if (dropdownContent.style.display === "block") {
-                        dropdownContent.style.display = "none";
-                    } else {
-                        dropdownContent.style.display = "block";
-                    }
-                });
-            }
-
-            function load_tab(tab) {
-                var dest = 'views/' + tab
-                console.log(dest);
-                document.getElementById("content").innerHTML = '<object type="text/html" data='+tab+' ></object>';
-            }
-        </script>
-
     </body>
 </html>
+
+<script>
+    /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+    var dropdown = document.getElementsByClassName("dropdown-btn");
+    var i;
+
+    for (i = 0; i < dropdown.length; i++) {
+        dropdown[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var dropdownContent = this.nextElementSibling;
+            if (dropdownContent.style.display === "block") {
+                dropdownContent.style.display = "none";
+            } else {
+                dropdownContent.style.display = "block";
+            }
+        });
+    }
+
+    function load_tab(tab) {
+        var dest = 'views/' + tab
+        console.log(dest);
+        document.getElementById("content").innerHTML = '<object type="text/html" data=' + tab + ' ></object>';
+    }
+</script>
