--- a/views/fill_select.html
+++ b/views/fill_select.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
+    <body id="fill_select">
 	    <div>
        	         <h1>Fill Survey</h1>
                  <h3>Select the survey you will be filling.</h3>
