--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
+    <body id="fill_survey">
 
 	<div>
        	     <h1>Fill Survey</h1>
