--- a/views/view_select.html
+++ b/views/view_select.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="fill_select.html"></script>
     </head>
-    <body>
+    <body id="view_select">
 	<div class="header"> 
 	    <a href="index.html">
             	<img src="SurvyaySmallLogo.jpg" alt="SurvYay">
