--- a/views/create_question.html
+++ b/views/create_question.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="css/gunks.css" />
 </head>
 <!--<body class="content">-->
-<body>
+<body id="create_question">
     <div>
-        <h1>Create Question</h1>
+        <h2>Create Question</h2>
     </div>
 
-    <div>
+    <div class="file">
         <label>Question:</label><br><br>
         <textarea rows="4" cols="50"> 
         </textarea>
