--- a/views/create_survey.html
+++ b/views/create_survey.html
@@ -5,7 +5,7 @@
         <meta name = "viewport" content = "width=device-width, initial-scale = 1">
         <link rel = "stylesheet" href = "css/gunks.css"/> 
     </head>
-    <body>
+    <body id="create_survey">
         <div>
             <h1>Create a survey</h1>
         </div>
