--- a/views/view_records.html
+++ b/views/view_records.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
+    <body id="view_records">
         <div>
             <h1> View Records</h1>
             <table>
