commented in tori's api login page

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
                 <img src="images/SurvyaySmallLogo.jpg" alt="SurvYay">
             </a>
             <h2>Welcome, User!</h2>
-            <button type="button">Logout</button>
+            <button type="button">Logout</button> <!--TODO: Add functionality to logout button-->
         </div>
 
         <!--SIDE NAV-->
