--- a/views/login.html
+++ b/views/login.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <script src="login.js"></script>
-        <link rel="stylesheet" href="gunks.css"/>
+        <link rel="stylesheet" href="/Users/mollysmith/Documents/GitHub/UpInTheGunks/public/css/gunks.css"/> <!--TODO: change link-->
         <title>Surv-YAY Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header> 
-            <img src="SurvyaySmallLogo.jpg" alt="SurvYay" style="width:400px;height:150px;">
+            <img src="/Users/mollysmith/Documents/GitHub/UpInTheGunks/public/images/SurvyaySmallLogo.jpg" alt="SurvYay" style="width:400px;height:150px;"> <!--TODO: change link-->
         </header>
 
         <div class="container">
@@ -25,3 +25,91 @@
         </div>
     </body>
 </html>
+
+<!--
+    <!DOCTYPE html>
+
+<head>
+    <title>Login</title>
+    <!--script(src='jquery.js')-->
+<!--    <script>
+            (function() {
+                ("#includedContent").load("testh.html");
+            });
+        </script>
+    </head>
+    <div>Project:<input id="prod" type="text" name="project" value="A0001"><br>Username:<input id="user" type="text" name="username" value="_tjoy"><br>Password:<input id="pass" type="text" name="password" value="surveysRkool"><br><br><input id="log" type="submit"
+            value="LogIn"><br></div>
+    <div><textarea id="userinfo" rows="4" cols="50">nothing yet</textarea></div>
+    <div id="includedContent"></div>
+    <script type="text/javascript">
+        var subd_user;
+        var subd_pass;
+        var subd_prod;
+        var real_user;
+        var real_pass;
+        var real_role;
+    
+        document.getElementById('log').addEventListener("click", function() {
+            logIn(document.getElementById('prod').value, document.getElementById('user').value);
+        }, false);
+    
+    
+        function logIn(gathered_prod, gathered_id) {
+            subd_user = gathered_id,
+                subd_pass = document.getElementById('pass').value,
+                subd_prod = gathered_prod
+    
+            var userURL = ('http://localhost:3000/api/users/single/' + gathered_prod + '/' + gathered_id)
+    
+            fetch(userURL)
+                .then((user_res) => {
+                    return user_res.json()
+                })
+                .then((user_data) => {
+                    let user_result = ``;
+                    user_data.forEach((user) => {
+                        const {
+                            UserID,
+                            Fir_Name,
+                            Las_Name,
+                            Email,
+                            Password,
+                            ProdID,
+                            Role
+                        } = user
+                        user_result +=
+                            `UserID: ${UserID} 
+                        FN : ${Fir_Name} \n 
+                        LN : ${Las_Name} \n 
+                        EM : ${Email} \n 
+                        PS : ${Password} \n 
+                        PD : ${ProdID} \n
+                        RL : ${Role}`;
+                        real_pass = Password;
+                        real_user = UserID;
+                        real_role = Role;
+                        console.log(real_pass + subd_pass);
+                    })
+                }).then(validator());
+        }
+    
+        function validator() {
+            console.log("made it")
+            if (subd_pass == real_pass) {
+                window.location = '/main';
+            } else if (subd_pass != real_pass) {
+                goAgain();
+                console.log("whats going on here");
+    
+                document.getElementById('userinfo').innerHTML = "sorry boss"
+            }
+        }
+    
+        function goAgain() {
+            if (subd_pass == real_pass) {
+                window.location = '/main';
+            }
+        }
+    </script>
+-->
