Got api route working in login page and updated design of login page

--- a/public/css/gunks.css
+++ b/public/css/gunks.css
@@ -5,6 +5,8 @@
   font-size: 35px;
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 95%;
+  height: 150px;
 }
 
 .header img { /*this is for the logo*/
