updated design of fill_survey.html

--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -1,5 +1,4 @@
-﻿
-<html lang="en">
+﻿<html lang="en">
     <head>
         <link rel="stylesheet" href="css/gunks.css">
         <meta charset="utf-8">
@@ -9,8 +8,24 @@
 
 	<div>
        	     <h1>Fill Survey</h1>
-             <h3>The survey will appear here.</h3>
-	</div>
+             <h3>Select the survey you will be filling.</h3>
+    </div>
+    
+    <div id = "search" style = "margin-left: 50%">
+            <input type = "text" value = "Filter By" id = "filterBy">
+            <button type = "button" id = "search">Search</button><br>
+    </div>
+
+    <div class="file">
+            
+            <div id = "bar">
+                <h3 style="text-align: center">Creator | Created | Title | Description </h3>
+                <div id = "search" style = "margin-right: 50%">
+                        <button type = "button" id = "select">Select</button><br>
+                </div>
+            </div>
+    </div>
+
 
     </body>
 </html>
