changed logo image from index.html to index

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <body>
         <!--HEADER-->
         <div class="header">
-            <a href="index.html">
+            <a href="index">
                 <img src="images/SurvyaySmallLogo.jpg" alt="SurvYay">
             </a>
             <h2>Welcome, User!</h2>
