updated middle container so that it lines up with header

--- a/public/css/gunks.css
+++ b/public/css/gunks.css
@@ -134,7 +134,7 @@ button { /*had to make another one since I kept breaking it*/
   z-index: 1;
   background-color: #DFE4E8;
   left: 140px;
-  width: 85%;
+  width: 1501px;
   height: 800px;
   top: 210px;
   font-size: 20px;
