--- a/views/view_surveys.html
+++ b/views/view_surveys.html
@@ -8,7 +8,7 @@
     <body id="view_surveys">
         <div>
             <h1> View Surveys</h1>
-            <table>
+            <!-- <table>
 		<tr>
     		   <th>Title</th>
     		   <th>Creator</th>
@@ -27,11 +27,37 @@
         	   <td>This</td>
     		   <td>Works</td>
   		</tr>
-	    </table>
-		<button type="button">&laquo;Back</button>
+	    </table> -->
+		<button type="button" id="list_surveys">View Surveys</button>
+		<br>
+		<br>
+		<textarea id='display_surveys' rows=20 cols=100></textarea>
 	</div>
     </body>
 </html>
 <script>
+	document.getElementById("list_surveys").addEventListener("click", function() {
+    getRecords();
+    }, false);
 
+	function getRecords(){
+		fetch('http://10.10.9.145:3000/api/surveys')
+		.then((res_1) => { return res_1.json() })
+		.then((data_1) => {
+			let result = ``;
+			data_1.forEach((record) => {
+				const { SurvID, SurvCreated, SurvCreator, SurvTitle, SurvDescription} = record
+				result +=
+				`Survey ID: ${SurvID} \n
+				Title: ${SurvTitle} \n
+				Description: ${SurvDescription} \n 
+				Date Created: ${SurvCreated} \n
+				Creator: ${SurvCreator} \n\n` ;
+				
+				document.getElementById('display_surveys').innerHTML = result;
+			});
+		})
+
+	}
 </script>
+
