--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -16,10 +16,9 @@
             <button type = "button" id = "search">Search</button><br>
     </div>
 
-    <div class="file">
-        <table id="surveyTable">
-
-        </table>
+    <div class="file" id="tableForm">
+        <!--<h3 style="text-align: center">Creator | Created | Title | Description </h3>-->
+        <table id="surveyTable"></table>
             
            <!-- <div id = "bar">
                 <h3 style="text-align: center">Creator | Created | Title | Description </h3>
@@ -35,106 +34,46 @@
         //}, false);
 
        // function showSurveyList() {
-            var test = document.getElementById('displayspot');
-            var url = 'http://10.10.9.145:3000/api/surveys';
-            fetch(url) // Connection to api
-                .then(surveyList => surveyList.json()) // Transform data into json
-                .then(function(data) {
-                    let result = ``;
-                    data.forEach((survey) => {
-                        const {
-                            SurvID,
-                            SurvCreated,
-                            SurvCreator,
-                            SurvTitle,
-                            SurvDescription
-                        } = survey
-                        result = [ 
-                            `SurvID: ${SurvID}`, 
-                            `Created: ${SurvCreated}`,
-                            `Creator: ${SurvCreator}`,
-                            `Title: ${SurvTitle}`,
-                            `Description: ${SurvDescription}`];
+        //var test = document.getElementById('surveyTable');
+        var url = 'http://10.10.9.145:3000/api/surveys';
+        fetch(url) // Connection to api
+            .then(surveyList => surveyList.json()) // Transform data into json
+            .then(function(data) {
+                let result = ``;
+                data.forEach((survey) => {
+                    const {
+                        SurvID,
+                        SurvCreated,
+                        SurvCreator,
+                        SurvTitle,
+                        SurvDescription
+                    } = survey
+                    result = 
+                        `${SurvCreator}
+                         ${SurvCreated}
+                         ${SurvTitle}
+                         ${SurvDescription}`;
+                    var cols = ["Creator ", "Created ", "Title ", "Description "];
+                    document.getElementById("surveyTable").innerHTML = makeTableHTML(cols);
+                });
 
-                        document.getElementById("surveyTable").innerHTML = makeTableHTML(result);
-                    });
-
-                })
+            })
         //}
 
-        function makeTableHTML(myArray) {
-            var result = "<table border=1>";
-            for(var i=0; i<myArray.length; i++) {
-                result += "<tr>";
-                for(var j=0; j<myArray[i].length; j++){
-                    result += "<td>"+myArray[i][j]+"</td>";
+        function makeTableHTML(hi) {
+            var result = document.getElementById("surveyTable");
+            for(var i=0; i<hi.length; i++) {
+                result += "<tr>"+hi[i]+"</tr>";
+                /*for(var j=0; j<cols[i].length; j++){
+                    result += "<td>"+cols[i][j]+"</td>";
                 }
-                result += "</tr>";
+
+                result += "</tr>";*/
             }
             result += "</table>";
             
             return result;
         }
-
-    
-    //-------------------------------------MODAL-------------------------------------------------------
-        /* Get the modal
-        var modal = document.getElementById("myModal");
-        
-        // Get the button that opens the modal
-        var btn = document.getElementById("select");
-        
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks on the button, open the modal 
-        btn.onclick = function() {
-            showSurveyList();
-        }
-        
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
-            modal.style.display = "none";
-        }
-        
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-        //-------------------------------------------------------------------------------------------------
-
-        //---------------------------------------API-------------------------------------------------------
-        function showSurveyList() {
-            /*var surveyList = ('http://10.10.9.145:3000/api/surveys/gather/2' );
-
-            fetch(surveyList)
-                .then((surveys) => {
-                    return surveys.json();
-                })
-                .then((data_1) => {
-                    let result = ``;
-                    data_1.forEach((survey) => {
-                        const {
-                            SurvID,
-                            SurvTitle,
-                            SurvDescription,
-                            SurvCreator
-                        } = listItem
-                        result += 
-                        `SurvID: ${SurvID} 
-                         Survey Title : ${SurvTitle} \n 
-                         Survey Description : ${SurvDescription} \n
-                         Survey Creator : ${SurvCreator}`;
-
-                         document.getElementById('myModal').value = "It worked";
-                         modal.style.display = "block";
-                    //});
-                //})
-                
-        }*/
-
 
     </script>
 
